<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".humedad"
    android:translationY="-45dp">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:translationY="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:translationY="100dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:gravity="center|center_vertical"
                    android:text="@string/humedad"
                    android:layout_marginRight="100dp" />

                <Switch
                    android:id="@+id/humedadswi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_vertical"
                    android:layout_marginLeft="100dp"
                    android:layout_marginStart="100dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/humedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:gravity="center|center_vertical"
                    android:text="0"
                    android:layout_marginRight="50dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"/>


            </RelativeLayout>

            <!--Relay numero 1-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humedadini"
                    android:textSize="15sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15sp"/>

                <TextView
                    android:id="@+id/huminicial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="100sp"
                    android:layout_marginEnd="100sp"
                    android:gravity="center_vertical"
                    android:text="0"/>

                    <ImageButton
                        android:id="@+id/huminicialbtn"
                        android:layout_width="60sp"
                        android:layout_height="50sp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/humedadini"
                        android:contentDescription="@string/humedadini"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humedadfin"
                    android:layout_marginTop="15sp"
                    android:textSize="15sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/humfinal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="100sp"
                    android:layout_marginEnd="100sp"
                    android:gravity="center_vertical"
                    android:text="0"/>

                <ImageButton
                    android:id="@+id/humfinalbtn"
                    android:layout_width="60dp"
                    android:layout_height="50sp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/humedadfin"
                    android:contentDescription="@string/humedadfin"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inR"
                    android:textSize="15sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15sp"/>

                <TextView
                    android:id="@+id/ontime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="100sp"
                    android:layout_marginEnd="100sp"
                    android:gravity="center_vertical"
                    android:text="0"/>

                <ImageButton
                    android:id="@+id/ontimebtn"
                    android:layout_width="60sp"
                    android:layout_height="50sp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/on"
                    android:contentDescription="@string/inR"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fiR"
                    android:textSize="15sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15sp"/>

                <TextView
                    android:id="@+id/oftime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="100sp"
                    android:layout_marginEnd="100sp"
                    android:gravity="center_vertical"
                    android:text="0"/>

                <ImageButton
                    android:id="@+id/oftimebtn"
                    android:layout_width="60sp"
                    android:layout_height="50sp"
                    android:src="@drawable/off"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/fiR"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:translationY="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/I"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/togglerelay"
                android:textColor="@color/relay"
                android:textOff="@string/relayBtn1"
                android:textOn="@string/relayBtn1" />

            <ToggleButton
                android:id="@+id/II"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/togglerelay"
                android:textColor="@color/relay"
                android:textOff="@string/relayBtn2"
                android:textOn="@string/relayBtn2" />

            <ToggleButton
                android:id="@+id/III"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/togglerelay"
                android:textColor="@color/relay"
                android:textOff="@string/relayBtn3"
                android:textOn="@string/relayBtn3" />

            <ToggleButton
                android:id="@+id/IV"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/togglerelay"
                android:textColor="@color/relay"
                android:textOff="@string/relayBtn4"
                android:textOn="@string/relayBtn4" />

        </LinearLayout>

        <TextView
            android:id="@+id/relayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/textTittle"
            android:background="@color/colorAccent"
            android:textAlignment="center"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@drawable/save" />

</FrameLayout>