<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".configuracion"
    tools:showIn="@layout/activity_configuracion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configtimetem"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/et_mostrar_fecha_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/formato_fecha"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginLeft="32dp" />

                <ImageButton
                    android:id="@+id/ib_obtener_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_today_24"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="0.505"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/et_mostrar_hora_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:ems="10"
                    android:hint="@string/formato_hora"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
                    android:layout_marginLeft="32dp" />

                <ImageButton
                    android:id="@+id/ib_obtener_hora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/baseline_schedule_24"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_hora_picker"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.504"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>